feat: add pagination to table in trades page
